--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.mobileassignment" >
+    package="com.example.mobileassignment">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MobileAssignment" >
+        android:theme="@style/Theme.MobileAssignment">
+        <activity
+            android:name=".NavHeader"
+            android:exported="false" />
         <activity
             android:name=".UserProfile"
             android:exported="false" />
@@ -55,7 +58,7 @@
             android:exported="false" />
         <activity
             android:name=".LoginPage"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
